# ztoq

./: .coverage  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.migration-report  LICENSE  LINTING_ISSUES.md  Makefile  README.md  alembic.ini  build.py  docker-compose.dashboard.yml  docker-compose.migration.yml  docker-compose.yml  pyproject.toml  pytest.ini  run-migration.sh  setup.cfg  smartbear-docs.paste.txt  sonar-project.properties  test_docs.sh  test_install.py  ztoq_data.db
.github/: dependabot.yml
.github/workflows/: ci.yml  container-scan.yml  etl-integration.yml  migration-pr-validation.yml  migration-tests.yml  quality-gates.yml  release.yml  scheduled-migration.yml
.husky/: pre-push
alembic/: __init__.py  env.py
alembic/versions/: __init__.py  a16c4721be8a_initial_schema.py  enhanced_database_schema.py  recommendation_history_table.py
config/: .flake8  Dockerfile  Dockerfile.migration-report  Makefile  alembic.ini  build.py  docker-compose.dashboard.yml  docker-compose.migration.yml  docker-compose.yml  run-migration.sh  setup.cfg  sonar-project.properties
config/scripts/: add_test_markers.py  check_in.py  fix_fstring.py  init_db.py  master_build.py  run_critical_lint.sh  run_lint.sh  sync_versions.py
docs/: CLAUDE.md  LINTING_IMPROVEMENTS.md  LINTING_ISSUES.md  README.md  api-mocking-guide.md  api-tokens.md  c4-diagram.md  c4_diagram.md  canonical-schema.md  chaos-engineering.md  connection-pooling.md  conversion-process.md  custom-fields-attachments.md  database-configuration.md  database-optimization.md  database-schema-design.md  docs-contribution-guide.md  entity-mapping.md  github-actions.md  kanban-history.md  kanban.md  maintenance.md  migration-guide.md  open-source-guidance.md  open-source-philosophy.md  openapi-integration.md  project-structure.md  qtest-migration-architecture.md  resource-management.md  scheduled-migrations.md  test-strategy.md  workflow-orchestration.md
docs/adr/: 001-use-poetry-for-dependency-management.md  002-storage-formats.md  003-use-pydantic-models.md  004-pagination-handling.md  005-cli-structure.md  006-sphinx-documentation.md  007-database-manager-implementation.md  008-test-driven-development.md  009-error-handling-strategy.md  010-logging-strategy.md  011-qtest-integration-architecture.md  012-test-driven-development-approach.md  013-etl-migration-workflow.md  014-database-platform-strategy.md  015-strategic-design-preferences.md  016-anti-fragile-and-black-swan-concepts.md  017-enhanced-custom-field-mapping.md  018-api-first-development-and-qa-empowerment.md  018-concrete-conceptual-thinking-balance.md  019-open-source-decision-framework.md  020-linting-strategy.md  020-resource-management-strategy.md  README.md
docs/badges/: e2e_tests.json  etl_integration_tests.json  integration_tests.json  test_results.json  unit_tests.json
docs/specs/: qtest-openapi.yml  z-openapi.yml
docs/upload/: a-guide-to-leveraging-agentic-ai-in-software-engineering.md  canonical-schema-proposal.txt  overall-strategy.txt  qtest-manager-api-spec.txt  qtest-parameters-api-spec.txt  qtest-pulse-api-spec.txt  qtest-scenario-api-spec.txt
examples/: README.md  contextual_logging_example.py  custom_fields_test.py  custom_migration.py  debug_example.py  generate_tests.py  migration_example.py  migration_report.py  qtest_auth_debug.py  qtest_auth_test.py  qtest_auth_tool.py  qtest_check_connection.py  qtest_client_example.py  qtest_cycle_hierarchy_example.py  qtest_cycle_import_example.py  qtest_diagnostic.py  qtest_direct_api_check.py  qtest_execution_import_example.py  qtest_execution_recovery_example.py  qtest_get_token.py  qtest_import_example.py  qtest_list_projects.py  qtest_project_list.py  qtest_verify_token.py  validation_example.py  verify_api_tokens.py
scripts/: README.md  __init__.py  add_license_headers.py  build_and_host_docs.py  check_in.py  check_personal_refs.py  ensure_dependencies.py  fix_fstring.py  fix_imports.py  fix_logging.py  fix_spacing.py  fix_unused_imports.py  init_db.py  master_build.py  post_install.py  remove_unused_imports.py  run_critical_lint.sh  run_lint.sh  setup.py  sync_versions.py  test_version.py  update_environment.py  verify_project_structure.py
tests/: README.md  __init__.py  conftest.py  test_pyramid.md
tests/acceptance/: README.md  __init__.py  conftest.py  test_cli_commands.py  test_workflow_cli.py
tests/fixtures/: README.md  __init__.py  api_clients.py  base.py  database.py  factories.py  integration.py  model_factories.py  system.py  test_fixtures_example.py  unit.py
tests/integration/: test_api.py  test_api_harness_integration.py  test_cli.py  test_cli_commands.py  test_connection_pooling.py  test_db_access_patterns.py  test_db_error_handling.py  test_db_indexing_integration.py  test_db_migrations.py  test_db_optimization_integration.py  test_db_parallel_operations.py  test_docker_compose.py  test_docker_images.py  test_docker_migration.py  test_fixtures_example.py  test_migration_custom_fields.py  test_migration_etl.py  test_migration_system_workflow.py  test_mock_server_compatibility.py  test_mock_server_performance.py  (+3 more)
utils/: test_docs.sh
ztoq/: README_DB_OPTIMIZATION.md  __init__.py  batch_strategies.py  cli.py  connection_pool.py  custom_field_mapping.py  data_comparison.py  data_fetcher.py  database_connection_manager.py  database_factory.py  database_manager.py  database_optimizations.py  db_index_cli.py  db_indexing.py  db_optimization_helpers.py  db_optimization_impl.py  entity_mapping.py  exporter.py  main.py  migration.py  migration_dashboard.py  migration_report.py  models.py  openapi_parser.py  optimized_database_manager.py  pg_database_manager.py  qtest_client.py  qtest_mock_factory.py  qtest_mock_server.py  qtest_models.py  sql_database_manager.py  storage.py  test_case_transformer.py  test_cycle_transformer.py  test_execution_transformer.py  test_generator.py  validation.py  validation_integration.py  validation_rules.py  validation_types.py  (+7 more)
ztoq_venv_imports/: __init__.py  alembic_proxy.py
(+132 files in other folders)
