[tool.poetry]
name = "ztoq"
version = "0.1.0"
description = "A Python tool that extracts test data from Zephyr Scale and migrates it to qTest"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "ztoq"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
pydantic = "^2.0"
requests = "^2.30.0"
typer = "^0.9.0"
rich = "^13.5.0"
fastapi = "^0.100.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.1"
black = "^23.0"
flake8 = "^6.0"
mypy = "^1.5"
tox = "^4.11"
httpx = "^0.28.1"
types-pyyaml = "^6.0.12.20250402"
types-requests = "^2.32.0.20250328"
uvicorn = "^0.34.1"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2"
sphinx-rtd-theme = "^3.0"
recommonmark = "^0.7"
myst-parser = "^4.0"
sphinx-autoapi = "^3.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "system: marks tests as system tests",
]

[tool.poetry.scripts]
ztoq = "ztoq.cli:app"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.flake8]
max-line-length = 100
exclude = ["venv/", ".git/", "__pycache__/", "*.egg-info/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"