[tool.poetry]
name = "ztoq"
version = "0.4.1"
description = "A Python tool that extracts test data from Zephyr Scale and migrates it to qTest"
authors = ["Eric C. Mumford (@heymumford)"]
readme = "README.md"
packages = [{include = "ztoq"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
pydantic = "^2.0"
requests = "^2.30.0"
typer = "^0.9.0"
rich = "^13.5.0"
fastapi = "^0.100.0"
jsonschema = "^4.20.0"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
pandas = "^2.2.3"
numpy = "^2.2.4"
psycopg2-binary = "^2.9.10"
responses = "^0.25.7"
tqdm = "^4.67.1"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
psutil = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.1"
black = "^23.0"
flake8 = "^6.0"
mypy = "^1.5"
tox = "^4.11"
httpx = "^0.28.1"
types-pyyaml = "^6.0.12.20250402"
types-requests = "^2.32.0.20250328"
uvicorn = "^0.34.1"
ruff = "^0.0.292"
isort = "^5.12.0"
pre-commit = "^3.3.3"
bandit = "^1.7.5"
safety = "^2.3.5"
pydocstyle = "^6.3.0"
interrogate = "^1.5.0"
radon = "^6.0.1"
xenon = "^0.9.0"
docformatter = "^1.7.5"
pylint = "^3.0.1"
pytest-benchmark = "^4.0.0"
responses = "^0.25.7"
matplotlib = "^3.10.1"
numpy = "^2.2.4"
pandas = "^2.2.3"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2"
sphinx-rtd-theme = "^3.0"
recommonmark = "^0.7"
myst-parser = "^4.0"
sphinx-autoapi = "^3.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "system: marks tests as system tests",
    "docker: marks tests related to Docker functionality",
    "acceptance: marks tests as acceptance tests for CLI commands",
]

[tool.poetry.scripts]
ztoq = "ztoq.cli:app"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

# flake8 configuration moved to setup.cfg

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "S",   # flake8-bandit
    "A",   # flake8-builtins
    "T",   # flake8-print
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "D",   # pydocstyle
    "ANN", # flake8-annotations
]
ignore = [
    "E501",  # line too long (handled by black)
    "S101",  # use of assert (acceptable in test files)
    "B008",  # function call in argument defaults (common pattern in FastAPI)
    "N815",  # mixed-case variable in class scope (common in SQLAlchemy models)
    "T201",  # print statements (acceptable in CLI tools)
    "S104",  # possible binding to all interfaces (acceptable in dev context)
    "E402",  # module level import not at top of file (acceptable after license headers)
    "D100",  # Missing module docstring (we use module-level docstrings selectively)
    "D104",  # Missing docstring in package (we use __init__.py for imports)
    "D200",  # One-line docstring should fit on one line (handled by docformatter)
    "D202",  # No blank lines allowed after function docstring (handled by docformatter)
    "D203",  # 1 blank line required before class docstring (handled by docformatter)
    "D212",  # Multi-line docstring summary should start at the first line (handled by docformatter)
    "D415",  # First line should end with a period, question mark, or exclamation point (handled by docformatter)
    "ANN101", # Missing type annotation for `self` in method
    "ANN102", # Missing type annotation for `cls` in classmethod
]
# Allow autofix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # Allow assert in tests
    "T201",  # Allow print in tests
    "B011",  # Allow assert False in tests
    "PT012", # Allow pytest.raises() without match
    "ANN",   # Allow missing type annotations in tests
    "D",     # Allow missing docstrings in tests
    "N802",  # Allow function names with uppercase characters (like testCamelCase)
]
"examples/**/*.py" = [
    "T201",  # Allow print in examples
    "ANN",   # Allow missing type annotations in examples
    "D",     # Allow missing docstrings in examples
    "S101",  # Allow assert in examples
]
"ztoq/cli.py" = [
    "T201",  # Allow print statements in CLI
    "ANN001", # Allow missing return type annotation in CLI (for click-decorated functions)
]
"ztoq/main.py" = [
    "T201",  # Allow print statements in main
    "E402",  # Allow imports after docstrings in main
]
"ztoq/**/*.py" = [
    "E402",  # Allow imports after docstrings in all ztoq modules
]
"config/scripts/**/*.py" = [
    "T201",  # Allow print statements in scripts
    "ANN",   # Allow missing type annotations in scripts
    "D",     # Allow missing docstrings in scripts
    "S",     # Allow security issues in scripts (these are development tools)
]

[tool.ruff.lint.isort]
known-first-party = ["ztoq"]
known-third-party = ["pydantic", "fastapi", "sqlalchemy", "pytest", "typer", "requests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
disallow_any_generics = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin",
]
exclude = [
    "^tests/.*$",
    "^config/scripts/.*$",
    "^examples/.*$",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "examples.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "config.scripts.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "rich.*",
    "typer.*",
    "fastapi.*",
    "sqlalchemy.*",
    "alembic.*",
    "pandas.*",
    "numpy.*",
    "matplotlib.*",
    "seaborn.*",
    "jsonschema.*",
    "tqdm.*",
    "psutil.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "venv", "config/scripts"]
skips = ["B101"]  # Skip assert detection

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = true
fail-under = 80  # Minimum percentage of docstring coverage
exclude = ["tests", "venv", "config/scripts", "examples"]
verbose = 0
omit-covered-files = false

[tool.docformatter]
recursive = true
make-summary-multi-line = true
pre-summary-newline = true
wrap-descriptions = 80
wrap-summaries = 80
blank = true
black = true

[tool.pylint.master]
ignore = ["tests", "venv", "config/scripts"]
ignore-patterns = ["^\\.#"]
extension-pkg-whitelist = ["pydantic"]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "invalid-name",
]

[tool.pytest.benchmarks]
min-time = 0.1
min-rounds = 5
max-time = 1.0
timer = "time.perf_counter"
warmup = true

[tool.coverage.run]
source = ["ztoq"]
omit = ["tests/*", "venv/*", "config/scripts/*", "examples/*"]
branch = true
parallel = true
dynamic_context = "test_function"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "if TYPE_CHECKING:",
    "except ImportError:",
    "\\.\\.\\.",  # ellipsis in type stubs
]
show_missing = true
fail_under = 80
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"